Tue Oct 10 19:11:16 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * login.c: include cvs.h before checking CVS_LOGIN, so it has a
        chance to get defined before we ask if it's defined.
        (login): oops, use semi not comma in `for' loop init.

        * Makefile.in (SOURCES, OBJECTS): include login.c, login.o.

        * main.c: added protoype for login().
        Added "login" entry to cmds[].
        (usg): added line about "login".

        * login.c: new file.

Tue Oct 10 18:33:47 1995  Karl Fogel  <kfogel@totoro.cyclic.com>

        * Makefile.in (COMMON_OBJECTS): added error.o.
        (OBJECTS): took error.o out; it's in COMMON_OBJECTS now.

Tue Oct 10 12:02:37 1995  Thorsten Lockert  <tholo@sigmasoft.com>

	* cvsbug.sh: Cater to lame versions of sh (4.4BSD ash) by using
	${foo-bar} instead of `if....`.

Tue Oct 10 12:02:37 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* remove.c (remove_fileproc): If noexec, don't remove file.  Check
	for error when removing file.

Sun Oct  8 12:32:15 1995  Peter Wemm  <peter@haywire.DIALix.COM>

	* run.c: detect/use POSIX/BSD style reliable signals for critical
	section masking etc.  Helps prevent stray locks on interruption.

Sat Oct  7 23:26:54 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* admin.c (admin): If group CVS_ADMIN_GROUP exists, allow only
	users in that group to use "cvs admin".
	* options.h.in: Default CVS_ADMIN_GROUP to "cvsadmin".

Sat Oct  7 23:05:24 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* add.c, checkout.c, commit.c, cvs.h, filesubr.c, import.c,
	lock.c, main.c, modules.c, options.h.in: New variable cvsumask
	which is used to set mode of files in repository (regardless of
	umask in effect when cvs is run).

Sat Oct  7 22:40:17 1995  Stephen Bailey  <sjbailey@sand.npl.washington.edu>

	* lock.c: Include AFSCVS ifdefs to deal with AFS's lack of
	correspondance between userid's from stat and from geteuid.

Sat Oct  7 22:28:49 1995  Scott Carson  <sdc@TracerTech.COM>
